<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Microsoft Corporation. All rights reserved.
  ~ Licensed under the MIT License.
  ~
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Space
        android:id="@+id/spaceLeft"
        android:layout_width="0px"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Space
        android:id="@+id/spaceRight"
        android:layout_width="0px"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextureView
        android:id="@+id/texture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spaceRight"
        app:layout_constraintStart_toEndOf="@id/spaceLeft"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/take_photo" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/spaceLeft"
        app:srcCompat="@android:drawable/ic_popup_sync"
        android:contentDescription="@string/switch_cameras" />
    <LinearLayout
        android:id="@+id/appCompatInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/design_default_color_background"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_marginTop="128dp"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Overlay_Text"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="36sp"
            android:layout_gravity="center"
            android:textStyle="bold" />
    </LinearLayout>
    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:checked="false"
        android:textOff="@string/feed_rotation_off"
        android:textOn="@string/feed_rotation"
        app:layout_constraintLeft_toRightOf="@+id/floatingActionButton3"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton3" />
    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="12dp"
        android:checked="true"
        android:textOff="@string/overlay_off"
        android:textOn="@string/overlay"
        app:layout_constraintRight_toLeftOf="@+id/floatingActionButton"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButton" />
    <ToggleButton
        android:id="@+id/tbResize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:checked="false"
        android:textOff="@string/portrait_locked"
        android:textOn="@string/orientation_unlocked"
        app:layout_constraintStart_toEndOf="@id/spaceLeft"
        app:layout_constraintTop_toTopOf="parent" />
    <ToggleButton
        android:id="@+id/tbCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="35dp"
        android:checked="false"
        android:textOff="@string/front_facing"
        android:textOn="@string/back_facing"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>